--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -75,7 +75,7 @@
 
           //console.log("buttonpress");
           //console.log(locData);
-          location.href = "/personalized";
+          location.href = "/fitness";
         });
       });
       </script>
