Removed button background color

--- a/views/recommendation.handlebars
+++ b/views/recommendation.handlebars
@@ -1,7 +1,7 @@
 <style>
   #boot_button {
     padding: 8px 8px 8px 32px;
-    background: #f0f0f0 url(https://image.flaticon.com/icons/png/128/907/907985.png);
+    background: url(https://image.flaticon.com/icons/png/128/907/907985.png);
     background-position: right;
     background-repeat: no-repeat;
     background-size: 30px;
@@ -9,7 +9,7 @@
 
   #jacket_button {
     padding: 8px 8px 8px 32px;
-    background: #f0f0f0 url(https://static.thenounproject.com/png/244971-200.png);
+    background: url(https://static.thenounproject.com/png/244971-200.png);
     background-position: right;
     background-repeat: no-repeat;
     background-size: 30px;
@@ -17,7 +17,7 @@
 
   #clothing_button {
     padding: 8px 8px 8px 32px;
-    background: #f0f0f0 url(https://static.thenounproject.com/png/143054-200.png);
+    background: url(https://static.thenounproject.com/png/143054-200.png);
     background-position: right;
     background-repeat: no-repeat;
     background-size: 35px;
@@ -25,7 +25,7 @@
 
   #gear_button {
     padding: 8px 8px 8px 32px;
-    background: #f0f0f0 url(https://img.icons8.com/pastel-glyph/2x/tourist-backpack.png);
+    background: url(https://img.icons8.com/pastel-glyph/2x/tourist-backpack.png);
     background-position: right;
     background-repeat: no-repeat;
     background-size: 30px;
