--- a/views/recommendation.handlebars
+++ b/views/recommendation.handlebars
@@ -80,10 +80,10 @@
   <div class="card">
     <div class="card-header" id="headingOne">
       <h1 class="mb-0">
-        <button id="boot_button" class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"></button>
+        <button id="boot_button" class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne"></button>
       </h1>
     </div>
-    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
       <div id="boot_rec" class="card-body"></div>
     </div>
   </div>
