--- a/views/recommendation.handlebars
+++ b/views/recommendation.handlebars
@@ -74,7 +74,7 @@
 <!-- Gear/Clothing Suggestions -->
 <div class="accordion container" id="accordionExample">
   <div>
-    <h1>Gear and Clothing Recommendations</h1>
+    <h1 style="text-align: center;">Gear and Clothing Recommendations</h1>
   </div><br><br>
   <!-- Boot Suggestion -->
   <div class="card">
